# bachelorThesis

./: CMakeLists.txt  README.md  functions.cpp  functions.h  main.cpp  reduction.h
documentation/: BachelorArbeit.aux  BachelorArbeit.bbl  BachelorArbeit.bcf  BachelorArbeit.blg  BachelorArbeit.dvi  BachelorArbeit.out  BachelorArbeit.ps  BachelorArbeit.run.xml  BachelorArbeit.tex  BachelorArbeit.toc  Sources.bib  notes.aux  notes.blg  notes.out  notes.tex  notes.toc
documentation/Praesentation/: pres.aux  pres.bbl  pres.blg  pres.nav  pres.out  pres.snm  pres.tex  pres.toc  pres.vrb  presNoPause.aux  presNoPause.blg  presNoPause.nav  presNoPause.snm  presNoPause.tex  presNoPause.toc  presNoPause.vrb  thesis.bib
documentation/Praesentation/img/: analysis1000_CrownNormal_runtime.xlsx  analysis1000_OneNormal_runtime.xlsx  analysisCrown_Trott_One.xlsx  analysisCrown_runtime.xlsx  analysisOne_Crown_Trott.xlsx  analysisOne_runtime.xlsx  analysisTrott_Crown_One.xlsx  analysisTrott_runtime.xlsx
documentation/Vorlage_Arbeit/: thesis.aux  thesis.bib  thesis.lof  thesis.lot  thesis.out  thesis.toc  thesisReduction.aux  thesisReduction.bbl  thesisReduction.blg  thesisReduction.dvi  thesisReduction.idx  thesisReduction.lof  thesisReduction.lot  thesisReduction.out  thesisReduction.tex  thesisReduction.toc  thesisReductionBackup.tex
documentation/Vorlage_Arbeit/img/: analysis1000_CrownNormal_runtime.xlsx  analysis1000_OneNormal_runtime.xlsx  (+3 more)
graphenbsp/: g0.gw  g1.gw  g10.gw  g11.gw  g12.gw  g13.gw  g14.gw  g16.gw  g17.gw  g2.gw  g3.gw  g4.gw  g5.gw  g6.gw  g7.gw  g8.gw  g9.gw
(+22 files in other folders)
